# rins

./: .gitignore  Cargo.toml  README.markdown
.github/workflows/: rust.yml
src/: main.rs
x/: index.html
